--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,6 +1,6 @@
 ---
 title             : "The good person is me: Spontaneous self-referential process prioritizes moral character in perceptual matching"
-shorttitle        : "Priorization of moral character"
+shorttitle        : "Priorization of good character is self-referential"
 
 author: 
   - name          : "Hu Chuan-Peng"
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task, where participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. With nine experiments (N = 404) we found that (1) there is a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to geometric shapes that were associated with good characters than shapes that were associated with neutral or bad characters; (2) the prioritization of good character was not determined by the valence *per se* but modulated by a self-referential process, i.e., the prioritization effect of good character were robust only when the good character referred to the self but weak or non-exist when it referred to others; (3) the mutual facilitation effect between the moral character and self-referential information occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous moral-self referential process as a mechanism of the prioritization effect of good character.
+ Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192 ), we found a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to geometric shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence or self-reference. Data from three experiments (N = 108) demonstrated that the prioritization effect of good character was robust only when the good character referred to the self but weak or non-exist when it referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and self-reference occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous self-referential process as a mechanism of the prioritization effect of good character.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -100,20 +100,11 @@ Summary:
         our results
 -->
 
-Morality is central to our social life. We not only experience a substantial amount of moral events every day [e.g., @hofmann_morality_2014] but also judge people’s moral character as "good" or "bad" all the time [@uhlmann_person-centered_2015]. Actually, moral character is so important that it is a basic dimension in social evaluation [@goodwin_moral_2014; @goodwin_moral_2015]. The information about the moral character of others helps us to distinguish between “us” and “them” [@ellemers_morality_2018] and decide who to cooperate with []. Because of its importance, we devote a substantial part of our conversations to gossiping about others' moral character [e.g., @dunbar_gossip_2004]. 
+Is moral information prioritized in perception? This question evoked much heat a few years ago but remains unsolved. On the one hand, morality is a basic dimension in social evaluation [@dunbar_gossip_2004; @ellemers_morality_2018; @goodwin_moral_2014; @goodwin_moral_2015], this importance should grant moral information more salient than morally neutral information and thus prioritized when the attentional resource is limited. This logic is similar to other stimuli that are also important to humans, e.g., threatening stimuli [XX], rewards [XX], or self-related stimuli [XX]. Indeed, previous studies reported bad characters are prioritized in visual processing [@anderson_visual_2011; @eiserbeck_visual_2020], suggesting that bad people are detected faster than neutral or good people. On the other hand, there is evidence against the view that morally bad information is prioritized in perception. First, researchers reported positive bias in processing moral-related information. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the negative bias in perceiving moral information is not robust [@stein_no_2017]. Third, the mechanism underlying the reported negative bias in processing moral-related information is debated [XX]. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. Here we manipulated the moral character by an associated learning task and investigated whether immediately acquired moral character information is prioritized in a perceptual matching task.
+ 
+If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism [XXX]. The positive bias toward moral information, on the other hand, is explained by value-based attention [XXX]. However, these explanations often ignore the fact the value is subjective per se [@juechems_where_2019]. Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory [see @sui_self_attention_2019 and @sui_tics_2015 for more details]. Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning was not only used in studying the self-relevance effect but also other factors such as aversive stimuli [XX] and rewards [XX]. By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence per se or by the self-referential of moral valence. 
 
-The importance of moral character may also extend to perception []. A number of studies have explored the extent to which moral character prioritized in visual perception and suggested that moral information influence visual perception via top-down processes. However, the top-down account of moral character's effect on perception evoked a on-going debate in the literature [@firestone_bbs_2016;@jussim_interpretations_2016]. 
-
-The current study set out to examine the effect of moral character on perceptual decision-making. First, we conducted a series of experiment to examine the existence of a prioritization effect of moral character. The results of these experiments, i.e., a prioritization effect of good character, led us to the second question: why positive moral character are prioritized instead of negative moral character in perceptual matching task? We hypothesized that good character are prioritized because of a spontaneous self-referential processes instead of value-based attention. We tested this hypothesis with three experiments and found that the prioritization effect of good character only exist when moral character are self-referential but diminished when moral character are other-referential. These results further motivated us to test the automaticity of self-referential processing to moral character information. And we found that good character and self-relevant information automatically binding with each other and facilitate the perceptual decision-making.
-
-## Prioritization effect of moral character
-@anderson_visual_2011 conducted a study in which participants were asked to associate faces with different behaviors (e.g., negative and neutral behaviors from social and nonsocial domains) and then performed a binocular rivalry task. The results of this study indicated that faces associated with negative social behaviors dominated participants' visual awareness for a longer time compared to faces associated with other types of behaviors  [but see @stein_no_2017]. @eiserbeck_visual_2020 also reported the influence of bad moral character on perception by combining associative learning with the attentional blink paradigm. This study found that neutral faces associated with negative behaviors were processed preferentially. The effect of good moral characters was also reported in studies. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. Direct evidence for positivity effect of moral character also exist: @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in pre-attentive process.However, 
-
-## Value-based attention or self-referential process?
-
-These studies, however, ignored the agency of participants who is perceiving the information and making perceptual decisions. The external stimuli only contain subjective value if they are relevant to the self of the decision-maker [@juechems_where_2019]. When it comes to moral character, there are long-history of studies showing that moral character is central for people's self-concept and identity. A positive moral character is viewed as the core feature of identity [e.g., @strohminger_true_2017]. Empirical evidence supported the notion that people distort their perception [], memory [], and change their actions [] to maintain a positive view of their moral self-view. Given this strong motivation, it is possible that participants has spontaneous self-referential process for the perception tasks where no self-referential process were not explicitly excluded [citation related to spontaneous self-referential].
-
-Here, we report nine experiments where we found (1) there is a robust good character prioritization effect in social associative learning task, i.e., when neutral geometric shapes were associated with good character, they were prioritized as compared to shapes associated with neutral or bad characters; (2) prioritization of good character was robust only when it is relevant to the self but weak or non-exist when it referred to a non-self label; (3) the binding between good character and self exist even when one of the label became task-irrelevant. Together, these results provided evidence for spontaneous self-referential processing as a novel mechanism of the prioritization effect of good character. In all experiments, a social associative learning task in which th effect of physical features are minimized — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. 
+We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @firestone_cognition_2016; @Firestone_2016_BBS; @jussim_interpretations_2016]. We examined whether participants’ performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes — in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
 
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
@@ -1095,7 +1086,7 @@ df_ms_dprm1_diff_id <- df_ms_sdt_m1_plot_diff %>%
 ```
 
 ```{r second meta rt, echo=FALSE, results='hide', warning=FALSE}
-# fit a three-level hierarchical model for RT, didn't specify the prior, lognormal, dummy coding
+# fit a three-level hierarchical model for RT, didn't specify the prior, lognormal, dummy coding, both match and nonmatch trials
 RT_ms_m1 <- df_ms %>%
   dplyr::mutate(RT_sec = RT/1000) %>% # log RT in seconds
   dplyr::filter(ACC == 1) %>%         # only correct trials
@@ -1113,6 +1104,24 @@ RT_ms_m1 <- df_ms %>%
             file = here::here("glmmModels/RT_ms_DummyCode_3_level"))
 summary(RT_ms_m1) # R-hat still has problem
 # pp_check(RT_val_m1)
+
+RT_ms_m1_match <- df_ms %>%
+        dplyr::mutate(RT_sec = RT/1000) %>% # log RT in seconds
+        dplyr::filter(ACC == 1) %>%         # only correct trials
+        dplyr::filter(Matchness == "Match") %>%
+        brms::brm(RT_sec ~ Identity*Valence + 
+              (Identity*Valence | ExpID_new) +   
+              (Identity*Valence | ExpID_new:Subject),
+            family=lognormal(),
+            data = .,
+            chains = 4,
+            control = list(adapt_delta = .90),
+            iter = 10000,
+            thin = 1,
+            cores = parallel::detectCores(),
+            backend = 'cmdstanr',  # with cmdstanr
+            file = here::here("glmmModels/RT_ms_DummyCode_3_level_match"))
+summary(RT_ms_m1_match) # R-hat still has problem
 
 # Population-Level Effects: 
 #                                   Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
