--- a/endnote.bib
+++ b/endnote.bib
@@ -35,6 +35,24 @@
    type = {Journal Article}
 }
 
+
+@article{sui_self_attention_2019,
+	series = {Attention \& {Perception}},
+	title = {Self-prioritization and the attentional systems},
+	volume = {29},
+	issn = {2352-250X},
+	url = {https://www.sciencedirect.com/science/article/pii/S2352250X18301982},
+	doi = {10.1016/j.copsyc.2019.02.010},
+	abstract = {Humans prioritize stimuli related to themselves rather than to other people. How we control these priorities is poorly understood, though it is relevant to the nature of self-processing and a wide range of neurological and neuropsychiatric disorders, from cases of strokes, dementia to depression and schizophrenia. We update the Self-Attention Network proposed in 2016 by evaluating how self-prioritization interacts with Peterson and Posner’s three attentional systems: alerting, orienting and executive control, based on evidence on a variety of behavioral and neuroscientific studies with healthy participants and patients with brain lesions. We suggest that all the three attentional networks contribute to self-prioritization. Understanding the nature of self-prioritization in attentional contexts may provide important clinical implications for a variety of disorders related to self-processing.},
+	language = {en},
+	urldate = {2021-12-23},
+	journal = {Current Opinion in Psychology},
+	author = {Sui, Jie and Rotshtein, Pia},
+	month = oct,
+	year = {2019},
+	pages = {148--152},
+}
+
 @article{Love_etal_2019_JASP,
    author = {Love, Jonathon and Selker, Ravi and Marsman, Maarten and Jamil, Tahira and Dropmann, Damian and Verhagen, Josine and Ly, Alexander and Gronau, Quentin F. and Å mÃ­ra, Martin and Epskamp, Sacha and Matzke, Dora and Wild, Anneliese and Knight, Patrick and Rouder, Jeffrey N. and Morey, Richard D. and Wagenmakers, Eric-Jan},
    title = {JASP: Graphical Statistical Software for Common Statistical Designs},
@@ -513,6 +531,44 @@ Publisher: American Psychological Association},
 	keywords = {Motivation, Morality, Vocabulary, Signal Detection (Perception), Justice}
 }
 
+
+@article{gantman_see_2016,
+	title = {See for {Yourself}: {Perception} {Is} {Attuned} to {Morality}},
+	volume = {20},
+	issn = {1364-6613, 1879-307X},
+	shorttitle = {See for {Yourself}},
+	url = {https://www.cell.com/trends/cognitive-sciences/abstract/S1364-6613(15)00287-9},
+	doi = {10.1016/j.tics.2015.12.001},
+	language = {English},
+	number = {2},
+	urldate = {2021-04-01},
+	journal = {Trends in Cognitive Sciences},
+	author = {Gantman, Ana P. and Bavel, Jay J. Van},
+	month = feb,
+	year = {2016},
+	pmid = {26739539},
+	note = {Publisher: Elsevier},
+	pages = {76--77},
+}
+
+@article{gantman_moral_2015,
+	title = {Moral {Perception}},
+	volume = {19},
+	issn = {1364-6613, 1879-307X},
+	url = {https://www.cell.com/trends/cognitive-sciences/abstract/S1364-6613(15)00181-3},
+	doi = {10.1016/j.tics.2015.08.004},
+	language = {English},
+	number = {11},
+	urldate = {2023-01-13},
+	journal = {Trends in Cognitive Sciences},
+	author = {Gantman, Ana P. and Bavel, Jay J. Van},
+	month = nov,
+	year = {2015},
+	pmid = {26440123},
+	note = {Publisher: Elsevier},
+	pages = {631--633},
+}
+
 @article{faul_statistical_2009,
 	title = {Statistical power analyses using G*Power 3.1: Tests for correlation and regression analyses},
 	volume = {41},
@@ -545,8 +601,7 @@ Publisher: American Psychological Association},
 	langid = {english}
 }
 
-@article{
-_mad_2020,
+@article{_mad_2020,
 	title = {The {MAD} Model of Moral Contagion: The Role of Motivation, Attention, and Design in the Spread of Moralized Content Online},
 	volume = {15},
 	issn = {1745-6916},
@@ -954,7 +1009,7 @@ _mad_2020,
 	issn = {2045-2322},
 	url = {https://www.nature.com/articles/s41598-020-76001-9},
 	doi = {10.1038/s41598-020-76001-9},
-	abstract = {Cognitive biases shape our perception of the world and our interactions with other people. Information related to the self and our social ingroups is prioritised for cognitive processing and can therefore form some of these key biases. However, ingroup biases may be elicited not only for established social groups, but also for minimal groups assigned by novel or random social categorisation. Moreover, whether these âingroup biasesâ are related to self-processing is unknown. Across three experiments, we utilised a social associative matching paradigm to examine whether the cognitive mechanisms underpinning the effects of minimal groups overlapped with those that prioritise the self, and whether minimal group allocation causes early processing advantages. We found significant advantages in response time and sensitivity (dprime) for stimuli associated with newly-assigned ingroups. Further, self-biases and ingroup-biases were positively correlated across individuals (Experiments 1 and 3). However, when the task was such that ingroup and self associations competed, only the self-advantage was detected (Experiment 2). These results demonstrate that even random group allocation quickly captures attention and enhances processing. Positive correlations between the self- and ingroup-biases suggest a common cognitive mechanism across individuals. These findings have implications for understanding how social biases filter our perception of the world.},
+	abstract = {Cognitive biases shape our perception of the world and our interactions with other people. Information related to the self and our social ingroups is prioritised for cognitive processing and can therefore form some of these key biases. However, ingroup biases may be elicited not only for established social groups, but also for minimal groups assigned by novel or random social categorisation. Moreover, whether these "ingroup biases"" are related to self-processing is unknown. Across three experiments, we utilised a social associative matching paradigm to examine whether the cognitive mechanisms underpinning the effects of minimal groups overlapped with those that prioritise the self, and whether minimal group allocation causes early processing advantages. We found significant advantages in response time and sensitivity (dprime) for stimuli associated with newly-assigned ingroups. Further, self-biases and ingroup-biases were positively correlated across individuals (Experiments 1 and 3). However, when the task was such that ingroup and self associations competed, only the self-advantage was detected (Experiment 2). These results demonstrate that even random group allocation quickly captures attention and enhances processing. Positive correlations between the self- and ingroup-biases suggest a common cognitive mechanism across individuals. These findings have implications for understanding how social biases filter our perception of the world.},
 	pages = {18933},
 	number = {1},
 	journaltitle = {Scientific Reports},
@@ -1057,12 +1112,15 @@ Publisher: American Psychological Association},
 	langid = {english}
 }
 
-@article{firestone_bbs_2016,
-	title = {Cognition does not affect perception: {Evaluating} the evidence for "top-down" effects},
+
+@article{Firestone_2016_BBS,
+	title = {Cognition does not affect perception: {Evaluating} the evidence for “top-down” effects},
 	volume = {39},
 	issn = {0140-525X, 1469-1825},
 	shorttitle = {Cognition does not affect perception},
+	url = {https://www.cambridge.org/core/journals/behavioral-and-brain-sciences/article/abs/cognition-does-not-affectperception-evaluating-the-evidence-for-topdown-effects/920E2AE74C642DD3CB3FA8160EA1D84A},
 	doi = {10.1017/S0140525X15000965},
+	abstract = {What determines what we see? In contrast to the traditional “modular” understanding of perception, according to which visual processing is encapsulated from higher-level cognition, a tidal wave of recent research alleges that states such as beliefs, desires, emotions, motivations, intentions, and linguistic representations exert direct, top-down influences on what we see. There is a growing consensus that such effects are ubiquitous, and that the distinction between perception and cognition may itself be unsustainable. We argue otherwise: None of these hundreds of studies – either individually or collectively – provides compelling evidence for true top-down effects on perception, or “cognitive penetrability.” In particular, and despite their variety, we suggest that these studies all fall prey to only a handful of pitfalls. And whereas abstract theoretical challenges have failed to resolve this debate in the past, our presentation of these pitfalls is empirically anchored: In each case, we show not only how certain studies could be susceptible to the pitfall (in principle), but also how several alleged top-down effects actually are explained by the pitfall (in practice). Moreover, these pitfalls are perfectly general, with each applying to dozens of other top-down effects. We conclude by extracting the lessons provided by these pitfalls into a checklist that future work could use to convincingly demonstrate top-down effects on visual perception. The discovery of substantive top-down effects of cognition on perception would revolutionize our understanding of how the mind is organized; but without addressing these pitfalls, no such empirical report will license such exciting conclusions.},
 	language = {en},
 	urldate = {2022-11-30},
 	journal = {Behavioral and Brain Sciences},
@@ -1070,8 +1128,26 @@ Publisher: American Psychological Association},
 	year = {2016},
 	note = {Publisher: Cambridge University Press},
 	pages = {e229},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/CL8SBYWI/920E2AE74C642DD3CB3FA8160EA1D84A.html:text/html},
 }
 
+@article{firestone_moral_2016,
+	title = {‘{Moral} {Perception}’ {Reflects} {Neither} {Morality} {Nor} {Perception}},
+	volume = {20},
+	issn = {1364-6613, 1879-307X},
+	url = {https://www.cell.com/trends/cognitive-sciences/abstract/S1364-6613(15)00272-7},
+	doi = {10.1016/j.tics.2015.10.006},
+	language = {English},
+	number = {2},
+	urldate = {2023-01-13},
+	journal = {Trends in Cognitive Sciences},
+	author = {Firestone, Chaz and Scholl, Brian J.},
+	month = feb,
+	year = {2016},
+	pmid = {26612519},
+	note = {Publisher: Elsevier},
+	pages = {75--76},
+}
 
 @article{jussim_interpretations_2016,
 	series = {Rigorous and {Replicable} {Methods} in {Social} {Psychology}},
@@ -1366,7 +1442,7 @@ Publisher: American Psychological Association},
 	issn = {0010-0277},
 	url = {https://www.sciencedirect.com/science/article/pii/S0010027713001236},
 	doi = {10.1016/j.cognition.2013.06.011},
-	abstract = {Research shows that social judgments influence decision-making in social environments. For example, judgments about an interaction partnersâ trustworthiness affect a variety of social behaviors and decisions. One mechanism by which social judgments may influence social decisions is by biasing the automatic allocation of attention toward certain social partners, thereby shaping the information people acquire. Using an attentional blink paradigm, we investigate how trustworthiness judgments alter the allocation of attention to social stimuli in a set of two experiments. The first experiment investigates trustworthiness judgments based solely on a social partnerâs facial appearance. The second experiment examines the effect of trustworthiness judgments based on experienced behavior. In the first, strong appearance-based judgments (positive and negative) enhanced stimulus recognizability but did not alter the size of the attentional blink, suggesting that appearance-based social judgments enhance face memory but do not affect pre-attentive processing. However, in the second experiment, in which judgments were based on behavioral experience rather than appearance, positive judgments enhanced pre-attentive processing of trustworthy faces. This suggests that a stimulusâs potential benefits, rather than its disadvantages, shape the automatic distribution of attentional resources. These results have implications for understanding how appearance- and behavior-based social cues shape attention distribution in social environments.},
+	abstract = {Research shows that social judgments influence decision-making in social environments. For example, judgments about an interaction partners' trustworthiness affect a variety of social behaviors and decisions. One mechanism by which social judgments may influence social decisions is by biasing the automatic allocation of attention toward certain social partners, thereby shaping the information people acquire. Using an attentional blink paradigm, we investigate how trustworthiness judgments alter the allocation of attention to social stimuli in a set of two experiments. The first experiment investigates trustworthiness judgments based solely on a social partner's facial appearance. The second experiment examines the effect of trustworthiness judgments based on experienced behavior. In the first, strong appearance-based judgments (positive and negative) enhanced stimulus recognizability but did not alter the size of the attentional blink, suggesting that appearance-based social judgments enhance face memory but do not affect pre-attentive processing. However, in the second experiment, in which judgments were based on behavioral experience rather than appearance, positive judgments enhanced pre-attentive processing of trustworthy faces. This suggests that a stimulus's potential benefits, rather than its disadvantages, shape the automatic distribution of attentional resources. These results have implications for understanding how appearance- and behavior-based social cues shape attention distribution in social environments.},
 	pages = {114--122},
 	number = {1},
 	journaltitle = {Cognition},
@@ -2023,4 +2099,61 @@ Publisher: Nature Publishing Group},
 	month = nov,
 	year = {2022},
 	keywords = {Neuroscience, Cognitive Neuroscience, Computational Neuroscience, Reproducibility, Docker, Python, Bayesian hierarchical modeling, HDDM, drift-diffusion models},
+}
+
+
+@article{lupyan_effects_2020,
+	title = {Effects of {Language} on {Visual} {Perception}},
+	volume = {0},
+	issn = {1364-6613, 1879-307X},
+	url = {https://www.cell.com/trends/cognitive-sciences/abstract/S1364-6613(20)30213-8},
+	doi = {10.1016/j.tics.2020.08.005},
+	language = {English},
+	number = {0},
+	urldate = {2020-10-09},
+	journal = {Trends in Cognitive Sciences},
+	author = {Lupyan, Gary and Rahman, Rasha Abdel and Boroditsky, Lera and Clark, Andy},
+	month = oct,
+	year = {2020},
+	pmid = {33012687},
+	note = {Publisher: Elsevier},
+	keywords = {prediction, perception, vision, top-down effects, categorization, language},
+	file = {ScienceDirect Full Text PDF:/home/hcp4715/Zotero/storage/SQNIFH2X/Lupyan et al. - 2020 - Effects of Language on Visual Perception.pdf:application/pdf},
+}
+
+
+@article{deltomme_instructed_2018,
+	series = {The implications and applications of learning via instructions},
+	title = {Instructed fear stimuli bias visual attention},
+	volume = {184},
+	issn = {0001-6918},
+	url = {https://www.sciencedirect.com/science/article/pii/S0001691817303062},
+	doi = {10.1016/j.actpsy.2017.08.010},
+	abstract = {We investigated whether stimuli merely instructed to be fear-relevant can bias visual attention, even when the fear relation was never experienced before. Participants performed a dot-probe task with pictures of naturally fear-relevant (snake or spider) or -irrelevant (bird or butterfly) stimuli. Instructions indicated that two pictures (one naturally fear-relevant and one fear-irrelevant) could be followed by an electrical stimulation (i.e., instructed fear). In reality, no stimulation was administered. During the task, two pictures were presented on each side of the screen, after which participants had to determine as fast as possible on which side a black dot appeared. After a first phase, fear was reinstated by instructing participants that the device was not connected but now was (reinstatement phase). Participants were faster when the dot appeared on a location where an instructed fear picture was presented. This effect seemed independent of whether picture content was naturally fear-relevant, but was only found in the first half of each phase, suggesting rapid extinction due to the absence of stimulation, and rapid re-evaluation after reinstatement. A second experiment similarly showed that instructed fear biases attention, even when participants were explicitly instructed that no stimulation would be given during the dot-probe task. Together, these findings demonstrate that attention can be biased towards instructed fear stimuli, even when these fear relations were never experienced. Future studies should test whether this is specific to fear, or can be observed for all instructions that change the relevance of a given stimulus.},
+	language = {en},
+	urldate = {2022-12-09},
+	journal = {Acta Psychologica},
+	author = {Deltomme, Berre and Mertens, Gaetan and Tibboel, Helen and Braem, Senne},
+	month = mar,
+	year = {2018},
+	keywords = {Attention, Fear conditioning, Dot-probe, Instructed fear, Learning via instructions},
+	pages = {31--38},
+}
+
+@article{atlas_instructions_2022,
+	title = {Instructions and experiential learning have similar impacts on pain and pain-related brain responses but produce dissociations in value-based reversal learning},
+	volume = {11},
+	issn = {2050-084X},
+	url = {https://doi.org/10.7554/eLife.73353},
+	doi = {10.7554/eLife.73353},
+	abstract = {Recent data suggest that interactions between systems involved in higher order knowledge and associative learning drive responses during value-based learning. However, it is unknown how these systems impact subjective responses, such as pain. We tested how instructions and reversal learning influence pain and pain-evoked brain activation. Healthy volunteers (n=40) were either instructed about contingencies between cues and aversive outcomes or learned through experience in a paradigm where contingencies reversed three times. We measured predictive cue effects on pain and heat-evoked brain responses using functional magnetic resonance imaging. Predictive cues dynamically modulated pain perception as contingencies changed, regardless of whether participants received contingency instructions. Heat-evoked responses in the insula, anterior cingulate, and other regions updated as contingencies changed, and responses in the prefrontal cortex mediated dynamic cue effects on pain, whereas responses in the brainstem’s rostroventral medulla (RVM) were shaped by initial contingencies throughout the task. Quantitative modeling revealed that expected value was shaped purely by instructions in the Instructed Group, whereas expected value updated dynamically in the Uninstructed Group as a function of error-based learning. These differences were accompanied by dissociations in the neural correlates of value-based learning in the rostral anterior cingulate, thalamus, and posterior insula, among other regions. These results show how predictions dynamically impact subjective pain. Moreover, imaging data delineate three types of networks involved in pain generation and value-based learning: those that respond to initial contingencies, those that update dynamically during feedback-driven learning as contingencies change, and those that are sensitive to instruction. Together, these findings provide multiple points of entry for therapies designs to impact pain.},
+	urldate = {2022-12-09},
+	journal = {eLife},
+	author = {Atlas, Lauren Y and Dildine, Troy C and Palacios-Barrios, Esther E and Yu, Qingbao and Reynolds, Richard C and Banker, Lauren A and Grant, Shara S and Pine, Daniel S},
+	editor = {Johansen, Joshua and Büchel, Christian and Korn, Christoph W},
+	month = nov,
+	year = {2022},
+	note = {Publisher: eLife Sciences Publications, Ltd},
+	keywords = {fMRI, conditioning, pain, instructions, expectancy, reversal learning},
+	pages = {e73353},
 }
