--- a/general_method.rmd
+++ b/general_method.rmd
@@ -1,27 +1,29 @@
 # General methods
 ## Design and Procedure
-This series of experiments used the social associative learning paradigm (or tagging paradigm, see @Sui_2012_JEPHPP), in which participants first learned the associations between geometric shapes and labels of person with different moral characters (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and labels were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes above the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When the overall accuracy reached 60% or higher at the end of the practicing session, participants proceeded to the experimental task, which was the same as in the practice phase. Otherwise, they finished more practices sessions until the overall accuracy was equal or greater than 60%.
+This series of experiments used the social associative learning paradigm (or self-tagging paradigm, see @Sui_2012_JEPHPP), in which participants first learned the associations between geometric shapes and labels of different moral characters (e.g., in the first three studies, the triangle, square, and circle and Chinese words for “good person”, “neutral person”, and “bad person”, respectively). The associations of shapes and labels were counterbalanced across participants. The paradigm consists of a brief learning stage and a test stage. During the learning stage, participants were instructed about the association between shapes and labels. Participants started the test stage with a practice phase to familiarize themselves with the task, in which they viewed one of the shapes above the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. If the overall accuracy reached 60% or higher at the end of the practicing session, participants proceeded to the experimental task of the test stage. Otherwise, they finished another practices sessions until the overall accuracy was equal to or greater than 60%.  The experimental task shared the same trial structure as in the practice. 
 
-Experiment 1a, 1b, 1c, 2, 5, and 6a were design to explore and validate the effect of moral character on perceptual matching. These experiments shared a 2 (matching: match vs. nonmatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series studies, which revealed a prioritization of good character. Experiment 1b, 1c, and 2 followed to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes instead of simultaneously. Note that a few participants in experiment 2 also participated experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
+Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and validate the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs. nonmatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which revealed a prioritization of good character. Experiments 1b, 1c, and 2 were then designed to confirm that it is moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with specific words. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associate the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influence the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in experiment 2 also participated in experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the effect size of moral character and other important social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, only the data from moral character blocks, which shared the design of experiment 1a, were included in the three-level models. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment aimed at exploring the neural correlates of the effect. Only the behavioral results of experiment 6a were included in the analysis reported here.
 
-Experiment 3a, 3b, and 6b were designed to test whether the prioritization of good person reflect a valence effect or a self-referential effect. To do so, we included self-reference as another within-subject variable. For example, the experiment 3a directly extend the design of experiment 1a into a 2 (matching: match vs. nonmatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). The experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b were conducted in two days: the first day participants finished perceptual matching task as a practice, and the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of block: in the self-referential blocks, they only responded to good-self, neutral-self, and bad-self, with half match trials and half nonmatch trials; in the other-reference blocks, they only responded to good-other, neutral-other, and bad-other.
+Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence effect alone or by an interaction between the valence effect and self-referential processing. To do so, we included self-reference as another within-subject variable. For example, experiment 3a directly extended experiment 1a into a 2 (matching: match vs. nonmatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), experiment 6b was conducted in two days: on the first day participants finished the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to separate the self-referential trials and other-referential trials. That is, participants finished two different types of blocks: in the self-referential blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
 
-Experiment 4a and 4b were design to further test the self-referential process in the prioritization of good-person. In 4a, we only used two labels (self vs. other) and two shapes (circle, square). To manipulate the moral character, we presented moral-related words within shapes and instructed participants to ignore the words in shapes during the task. In 4b, we reversed the role of self-reference and moral character: participant learned three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle), and the words related to identity, "self" or "other", were presented in shapes. As in 4a, participants were told to ignore the words inside the shape during the task. 
+Experiments 4a and 4b were designed to further test the mechanism of the self-referential process in the prioritization of good character. In experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs. other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. To test the effect of moral character, we presented the labels of moral character in shapes and instructed participants to ignore the words in shapes when making matching judgments. In the experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, "self" or "other", were presented within the shapes. As in 4a, participants were told to ignore the words inside the shape during the perceptual matching task. 
 
-E-prime 2.0 was used for presenting stimuli and collecting behavioral responses. For participants recruited in Tsinghua University, they finished the experiment individually in a dim-lighted chamber, stimuli were presented on 22-inch CRT monitors and their head were fixed by a chin-rest brace. The distance between participants' eyes and the screen was about 60 cm. The visual angle of geometric shapes was about $3.7^\circ × 3.7^\circ$, the fixation cross is of $0.8^\circ × 0.8^\circ$ visual angle at the center of the screen. The words were of $3.6^\circ$ × $1.6^\circ$ visual angle. The distance between the center of the shape or the word and the fixation cross was $3.5^\circ$ of visual angle. For participants recruited in Wenzhou University, they finished the experiment in a group consisted of 3 ~ 12 participants in a dim-lighted testing room. Participants were required to finished the whole experiment independently. Also, they were instructed to start the experiment at the same time, so that the distraction between participants were minimized. The stimuli were presented on 19-inch CRT monitor. The visual angles are could not be exactly controlled because participants’ chin were not fixed.
+## Stimuli and Materials
 
-In most of these experiments, participant were also asked to fill a battery of questionnaire after they finish the behavioral tasks. All the questionnaire data were open [see, dataset 4 in @Liu_2020_JOPD]. See Table S1 for a summary information about all the experiments. 
+E-prime 2.0 was used for presenting stimuli and collecting behavioral responses. The experiments were conducted in two universities located in two different cities in China. Participants recruited from Tsinghua University, Beijing, finished the experiment individually in a dim-lighted chamber. Stimuli were presented on 22-inch CRT monitors and participants rest their chins on a brace to fix the distance between their eyes and the screen around 60 cm. The visual angle of geometric shapes was about $3.7^\circ × 3.7^\circ$, the fixation cross is of $0.8^\circ × 0.8^\circ$ visual angle at the center of the screen. The words were of $3.6^\circ$ × $1.6^\circ$ visual angle. The distance between the center of shapes or images of labels and the fixation cross was of $3.5^\circ$ visual angle. Participants recruited from Wenzhou University, Wenzhou, finished the experiment in a group consisting of 3 ~ 12 participants in a dim-lighted testing room. They were required to finish the whole experiment independently. Also, they were instructed to start the experiment simultaneously, so that the distraction between participants was minimized. The stimuli were presented on 19-inch CRT monitors with the same set of parameters in E-prime 2.0 as in Tsinghua University, however, the visual angles could not be controlled because participants’ chins were not fixed.
+
+In most of these experiments, participants were also asked to fill out questionnaires after finishing the behavioral tasks. All the questionnaire data were open [see, dataset 4 in @Liu_2020_JOPD]. See Table S1 for a summary of information about all the experiments.
 
 ## Data analysis
 
-We used the `tidyverse` of r (see script `Load_save_data.r`) to preprocess the data. Results of all experiments were then analyzed using Bayesian hierarchical models.
+We used the `tidyverse` of r (see script `Load_save_data.r`) to preprocess the data. The data from all experiments were then analyzed using Bayesian hierarchical models.
 
-We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data, because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or *t*-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation [@Rouder_2005_BHM_SDT]. Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied [@Rousselet_2019]. Third, BHM provides an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels. 
+We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or *t*-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore providing uncertainty in estimation [@Rouder_2005_BHM_SDT]. Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using the normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide a better fitting of the data. For example, Reaction times are not normally distributed but are right skewed, and the linear assumption in ANOVAs is not satisfied [@Rousselet_2019]. Third, BHM provides a unified framework to analyze data from different levels and different sources, avoiding information loss when we need to combine data from different experiments. 
 
-We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as backend, for the BHM analyses. We estimated the over-all effect across experiments that aimed at testing the same effect, instead of a two-step approach where we reporting the value of parameters, e.g., $d'$, for each experiment, and then synthesizing the overall effect by random effect model meta-analyses [e.g., @Goh_2016_mini]. More specifically, a three-level model is used to estimate the overall effect of good-person on perceptual matching, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for all experiments that testing the modulation effect of self-referential on the prioritization of good person , including experiment 3a, 3b, and 6b. Results of individual experiment can be found in the supplementary results. For experiment 4a and 4b, which tested the spontaneous binding between self and good-person, we used HBM for each experiment separately. 
+We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as the backend, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis [e.g., @Goh_2016_mini]. More specifically, a three-level model was used to estimate the overall effect of good-person on perceptual matching, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for all experiments that tested the modulation effect of self-referential processing on the prioritization of good character, including experiments 3a, 3b, and 6b. Results of the individual experiment can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately. 
 
-### Response
-We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used signal detection theory approach to analyze the response data. More specifically, the match trials are treated as signal and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
+### Response data
+We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used the signal detection theory approach to analyze the response data. More specifically, the match trials are treated as signals and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
 
 We used the Bernoulli distribution for the signal detection theory. The probability that the $j$th subject responded "match" ($y_{ij} = 1$) at the $i$th trial $p_{ij}$ is distributed as a Bernoulli distribution with parameter $p_{ij}$:
 
@@ -41,33 +43,14 @@ In `BRMs`, we used the following formula for the first set of experiments, which
 
 `saymatch ~ 0 + Valence + Valence:ismatch + (0 + Valence + Valence:ismatch | Subject) + (0 + Valence + Valence:ismatch | ExpID_new:Subject) , family = bernoulli(link="probit")`
 
-For experiments that had two by two by three design, we used the follow formula for the BGLM:
+For experiments 3a, 3b, and 6b, an additional variable is included in the formula:
 
-`saymatch ~ 0 + ID:Valence + ID:Valence:ismatch + (0 + ID:Valence + ID:Valence:ismatch | Subject), family = bernoulli(link="probit")`
+`saymatch ~ 0 + ID:Valence + ID:Valence:ismatch + (0 + ID:Valence + ID:Valence:ismatch | Subject) + (0 + ID:Valence + ID:Valence:ismatch | ExpID_new:Subject), family = bernoulli(link="probit")`
 
-In the same vein, we can estimate the posterior of parameters across different experiments. We can use a nested hierarchical model to model all the experiment with similar design:
-$$y_{ijk} \sim Bernoulli(p_{ijk})$$
-the generalized linear model is then
-$$ \Phi(p_{ijk}) =  0 + \beta_{0jk}Valence_{ijk} + \beta_{1j}IsMatch_{ijk} * Valence_{ijk}$$
-The outcomes $y_{ijk}$ are 0 if participant $j$ in experiment k responded "nonmatch" on trial $i$, 1 if they responded "match". 
 
-$$\begin{bmatrix}\beta_{0jk}\\
-\beta_{1jk}\\
-\end{bmatrix} \sim N(\begin{bmatrix}\theta_{0k}\\
-\theta_{1k}\\
-\end{bmatrix}, \sum)$$
+### Reaction times
+We used log-normal distribution (https://lindeloev.github.io/shiny-rt/#34_(shifted)_log-normal) to model the RT data. This means that we need to estimate the posterior of two parameters: $\mu$, and $\sigma$. $\mu$ is the mean of the `logNormal` distribution, and $\sigma$ is the disperse of the distribution. 
 
-and the experiment level parameter $mu_{0k}$ and $mu_{1k}$ is from a higher order distribution:
-
-$$\begin{bmatrix}\theta_{0k}\\
-\theta_{1k}\\
-\end{bmatrix} \sim N(\begin{bmatrix}\mu_{0}\\
-\mu_{1}\\
-\end{bmatrix}, \sum)$$
-in which $mu_{0}$ and $mu_{1}$ are the population level parameters.
-
-##### Reaction times
-We used log-normal distribution (https://lindeloev.github.io/shiny-rt/#34_(shifted)_log-normal) to model the data. This means that we need to estimate the posterior of two parameters: $\mu$, $\sigma$. $\mu$ is the mean of the `logNormal` distribution, and $\sigma$ is the disperse of the distribution. 
 The reaction time of the $j$th subject on $i$th trial is log-normal distributed:
 $$ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})$$ 
 $y_{ij}$ is the RT of the $i$th trial of the $j$th participants.
@@ -79,37 +62,33 @@ $$ \begin{bmatrix}\beta_{0j}\\
 \theta_{1}\\
 \end{bmatrix}, \sum) $$
 
-
 $$\sigma_{j} \sim HalfNormal()$$
-Formula used for modeling the data as follow:
+
+The formula used for modeling the data from experiments with a 2 by 3 within-subject design is as follows:
 
 `RT_sec ~ 1 + Valence*ismatch + (Valence*ismatch | Subject), family = lognormal()`
 
-or 
+For experiments with a 2 by 2 by 3 within-subject design, the formula is as follows:
 
 `RT_sec ~ 1 + ID*Valence*ismatch + (ID*Valence*ismatch | Subject), family = lognormal()`
 
-we expanded the RT model three-level model in which participants and experiments are two group level variable and participants were nested in the experiments.
+As for the $d’$, we expanded the RT model to three-level models and the formulas used for three-level models are as follows:
 
-$$ log(y_{ijk}) \sim N(\mu_{jk}, \sigma_{jk})$$ 
+`RT_sec ~ 1 + Valence*ismatch + (Valence*ismatch | Subject) + (Valence*ismatch | ExpID_new:Subject), family = lognormal()`
 
-$y_{ijk}$ is the RT of the $i$th trial of the $j$th participants in the $k$th experiment.
+or 
 
-$$\log(y_{ijk}) \sim N(\mu_{jk}, \sigma_{jk})$$
-$$\sigma_{jk} \sim HalfNormal()$$
-$$\mu_{jk} = \beta_{0jk} + \beta_{1jk}*IsMatch_{ijk} * Valence_{ijk} $$
-$$\beta_{jk} \sim N(\mu_{j}, \sigma_j)$$
+`RT_sec ~ 1 + ID*Valence + (ID*Valence | Subject) + (ID*Valence | ExpID_new:Subject), family = lognormal()` 
 
-$$\mu_j \sim N(\mu, \sigma)$$
-$$\sigma_j \sim HN(\sigma_{\sigma})$$
+Note that for experiments 3a, 3b, and 6b, the three-level model for reaction times only included the matched trials to avoid divergence when estimating the posterior of the parameters.
 
-### Prioritization of good person
-We estimated the effect size of $d'$ and RT from experiment 1a, 1b, 1c, 2, 5, and 6a for the prioritization of good person. We reported fixed effect of three-level BHM that included all experiments that tested the valence effect. 
+### Prioritization of moral character
+We tested whether moral characters are prioritized by examining the population-level effects from the three-level Bayesian hierarchical model of $d'$ and reaction times from experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distribution of the good/bad character and the neutral character and tested whether the 95% highest density intervals (HDIs) of the difference include zero. If the 95% highest density intervals do not include zero, we infer that there is a population-level difference between the conditions in the test, otherwise, we will infer that there is no evidence for such a difference. Note that for reaction times, we focused on the matched trials as in previous studies.
 
-### Prioritization of good person is modulated by self-referential
-We also estimated the interaction between moral character and self-referential process, which included results from experiment 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: valence effect or self-referential based prioritization. 
+### Interaction between valence and self-referential processing
+We tested the interaction between valence and self-referential processing by examining the interaction between moral character and self-referential process, which included results from experiments 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: the valence effect or the interaction between self-referential processing and valence. If the valence effect model is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibit a similar pattern for both self- and other-referential conditions. On the other hand, if the interaction model is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibit different patterns for self- and other-referential conditions.
 
-### Spontaneous binding between self and good person
-In the third part, we focused on experiment 4a and 4b, which were designed to examine two more nuanced explanation concerning the good-self. The design of experiment 4a and 4b are complementary. Together, they can test whether participants are more sensitive to the moral character of the Self (4a), or the identity of the good character (4b).
+### Spontaneous interaction between the self and good character
+Based on data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous. The design of experiments 4a and 4b are complementary. For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there should also be an interaction between the two, e.g., there will be a self-other difference for some moral character conditions but not for other moral character conditions.
 
-We only reported the subjective distance between different persons, and did not analyze other questionnaire data, which were described in [@Liu_2020_JOPD].
+We only reported the subjective distance between different persons in the supplementary results and did not analyze other questionnaire data described in [@Liu_2020_JOPD].
